# hackUPC

./: .gitignore  CLAUDE.md  README.md  render.yaml
.claude/: settings.local.json
backend/: .gitignore  README.md  pyproject.toml
backend/app/: config.py  datastore.py  main.py  schemas.py
backend/app/agents/: _key_pool.py  _llm_retry.py  orchestrator.py  variant_brief.py  vision_insight.py
backend/app/routes/: actions.py  advertisers.py  agent.py  campaigns.py  creatives.py  portfolio.py  recommendations.py
backend/app/services/: advisor.py  campaign_health.py  fatigue.py  queries.py  recommendation_cache.py  recommendation_copy.py  slice_cache.py  windowed.py
backend/models/: fatigue_classifier_v1.joblib  fatigue_classifier_v2.joblib
backend/scripts/: train_fatigue.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/app/: advisor.css  layout.tsx  (+2 more)
research/: README.md  fatigue_kpi_research.ipynb  model_justification.md  pyproject.toml
resources/: HackUPC_2026_Opening_Ceremony_eng.txt
resources/smadex/: dataset_notes.md
resources/submission/: about.md  build_cheatsheet_pdf.py  build_pdf.py  cheatsheet.md  team.md
resources/taskInfo/: challenges.md  data_findings.md  demo_script.md  diversity_spread_results.md  execution_tracker.md  hackUPCInfo.txt  hypothesis_test_results.md  join_aggregate_opportunities.md  judging.md  q1_health_metric_implementation.md  smadex.md  strategy.md
resources/teamInfo/: aditya.txt  andrew.txt  krish.txt
resources/uidesign/: HOUSE_RULES.md  Smadex Twin Copilot.html  handoff.md  smadex.css  tokens.json
(+86 files in other folders)
