[project]
name = "smadex-backend"
version = "0.1.0"
description = "Smadex Creative Intelligence — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pandas>=2.2",
    "pydantic>=2.9",
    "httpx>=0.28.1",
    "numpy>=2.0",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "ruptures>=1.1",
]

[tool.uv]
package = false
