[project]
name = "smadex-research"
version = "0.1.0"
description = "Smadex creative-intelligence research notebooks"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "shap>=0.46",
    "jupyter>=1.1",
    "ipykernel>=6.29",
]

[tool.uv]
package = false
